--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -24,6 +24,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.asakusafw</groupId>
+			<artifactId>asakusa-runtime</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_${scala.binary.version}</artifactId>
 		</dependency>
