--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -2,13 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>com.asakusafw</groupId>
-		<artifactId>asakusafw-spark</artifactId>
+		<groupId>com.asakusafw.spark</groupId>
+		<artifactId>asakusafw-spark-compiler</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>asakusafw-spark-core</artifactId>
+	<artifactId>asakusafw-spark-compiler-core</artifactId>
 	<packaging>jar</packaging>
 
 	<build>
@@ -29,12 +29,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.asakusafw</groupId>
+			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-runtime</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.asakusafw</groupId>
+			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-tools-asm</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -75,7 +75,7 @@
 			<artifactId>scalatest_${scala.binary.version}</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.asakusafw</groupId>
+			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-tools-asm</artifactId>
 			<version>${project.version}</version>
 			<classifier>tests</classifier>
