--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -8,12 +8,11 @@
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>asakusafw-spark-tools</artifactId>
+	<artifactId>asakusafw-spark-compiler</artifactId>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>asm</module>
-		<module>graph</module>
+		<module>core</module>
 	</modules>
 
 </project>
