--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.asakusafw</groupId>
+	<groupId>com.asakusafw.spark</groupId>
 	<artifactId>asakusafw-spark</artifactId>
 	<packaging>pom</packaging>
 	<version>0.1.0-SNAPSHOT</version>
@@ -26,7 +26,7 @@
 	</properties>
 
 	<modules>
-		<module>core</module>
+		<module>compiler</module>
 		<module>runtime</module>
 		<module>tools</module>
 	</modules>
