--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>com.asakusafw</groupId>
+		<groupId>com.asakusafw.spark</groupId>
 		<artifactId>asakusafw-spark</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
