--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>scalatest_${scala.binary.version}</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-mock</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-tools-asm</artifactId>
 			<version>${project.version}</version>
