--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -25,14 +25,35 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.asakusafw</groupId>
+			<artifactId>asakusa-runtime</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.asakusafw</groupId>
 			<artifactId>asakusa-dsl-vocabulary</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
 			<artifactId>asakusa-compiler-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-plan</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>com.asakusafw.spark</groupId>
+			<artifactId>asakusafw-spark-backdoor</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-runtime</artifactId>
@@ -41,6 +62,11 @@
 		<dependency>
 			<groupId>com.asakusafw.spark</groupId>
 			<artifactId>asakusafw-spark-tools-asm</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.spark</groupId>
+			<artifactId>asakusafw-spark-tools-graph</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
