--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@ encoding/<project>=UTF-8
 
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
+				<artifactId>asakusa-compiler-common</artifactId>
+				<version>${asakusafw-lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-model</artifactId>
 				<version>${asakusafw-lang.version}</version>
 			</dependency>
@@ -193,7 +198,7 @@ encoding/<project>=UTF-8
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
-				<artifactId>asakusa-compiler-cli</artifactId>
+				<artifactId>asakusa-compiler-analyzer</artifactId>
 				<version>${asakusafw-lang.version}</version>
 			</dependency>
 
