--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -81,6 +81,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.jsuereth</groupId>
+			<artifactId>scala-arm_${scala.binary.version}</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
@@ -115,6 +120,10 @@
 			<version>${project.version}</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-repl_${scala.binary.version}</artifactId>
 		</dependency>
 	</dependencies>
 
