--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,12 @@ encoding/<project>=UTF-8
 			</dependency>
 
 			<dependency>
+				<groupId>com.asakusafw.lang.compiler</groupId>
+				<artifactId>asakusa-compiler-plan-spark</artifactId>
+				<version>${asakusafw-lang.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.apache.spark</groupId>
 				<artifactId>spark-core_${scala.binary.version}</artifactId>
 				<version>${spark.version}</version>
