--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<logback.version>1.1.2</logback.version>
 
 		<junit.version>4.12</junit.version>
+		<hamcrest.version>1.3</hamcrest.version>
 		<scalatest.version>2.2.3</scalatest.version>
 	</properties>
 
@@ -322,6 +323,12 @@ encoding/<project>=UTF-8
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-library</artifactId>
+				<version>${hamcrest.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
