--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -50,8 +50,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.asakusafw.lang.compiler</groupId>
-			<artifactId>asakusa-compiler-plan-spark</artifactId>
+			<groupId>com.asakusafw.planner.spark</groupId>
+			<artifactId>asakusafw-planner-spark</artifactId>
 		</dependency>
 
 		<dependency>
