--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,12 @@ encoding/<project>=UTF-8
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.asakusafw.lang.compiler</groupId>
+				<artifactId>asakusa-compiler-model-testing</artifactId>
+				<version>${asakusafw-lang.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.spark</groupId>
 				<artifactId>spark-repl_${scala.binary.version}</artifactId>
 				<version>${spark.version}</version>
