--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -112,7 +112,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.asakusafw.lang.compiler</groupId>
-			<artifactId>asakusa-compiler-mock</artifactId>
+			<artifactId>asakusa-compiler-api-testing</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.asakusafw.lang.compiler</groupId>
