--- a/pom.xml
+++ b/pom.xml
@@ -340,7 +340,7 @@ encoding/<project>=UTF-8
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
-				<artifactId>asakusa-compiler-mock</artifactId>
+				<artifactId>asakusa-compiler-api-testing</artifactId>
 				<version>${asakusafw-lang.version}</version>
 				<scope>test</scope>
 			</dependency>
