--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<asakusafw.version>0.7.2-hadoop1</asakusafw.version>
 		<asakusafw-lang.version>0.1-SNAPSHOT</asakusafw-lang.version>
+		<asakusafw-bridge.version>0.1-SNAPSHOT</asakusafw-bridge.version>
 		<asakusafw-planner-spark.version>0.1-SNAPSHOT</asakusafw-planner-spark.version>
 
 		<scala.binary.version>2.10</scala.binary.version>
@@ -202,6 +203,12 @@ encoding/<project>=UTF-8
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-analyzer</artifactId>
 				<version>${asakusafw-lang.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.asakusafw.bridge</groupId>
+				<artifactId>asakusa-bridge-runtime</artifactId>
+				<version>${asakusafw-bridge.version}</version>
 			</dependency>
 
 			<dependency>
