--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -27,6 +27,10 @@
 			<groupId>com.asakusafw</groupId>
 			<artifactId>asakusa-runtime</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.bridge</groupId>
+			<artifactId>asakusa-bridge-runtime</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
