--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -52,6 +52,10 @@
 			<groupId>com.asakusafw.lang.compiler</groupId>
 			<artifactId>asakusa-compiler-plan</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-analyzer</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.asakusafw.planner.spark</groupId>
