--- a/pom.xml
+++ b/pom.xml
@@ -162,59 +162,70 @@ encoding/<project>=UTF-8
 				<groupId>com.asakusafw</groupId>
 				<artifactId>asakusa-runtime</artifactId>
 				<version>${asakusafw.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw</groupId>
 				<artifactId>asakusa-dsl-vocabulary</artifactId>
 				<version>${asakusafw.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw</groupId>
 				<artifactId>simple-graph</artifactId>
 				<version>${asakusafw.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-common</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-model</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-api</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-core</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-plan</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.asakusafw.lang.compiler</groupId>
 				<artifactId>asakusa-compiler-analyzer</artifactId>
 				<version>${asakusafw-lang.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>com.asakusafw.bridge</groupId>
 				<artifactId>asakusa-bridge-runtime</artifactId>
 				<version>${asakusafw-bridge.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>com.asakusafw.planner.spark</groupId>
 				<artifactId>asakusafw-planner-spark</artifactId>
 				<version>${asakusafw-planner-spark.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
