Provide inspection information of plan.

--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -56,6 +56,10 @@
 			<groupId>com.asakusafw.lang.compiler</groupId>
 			<artifactId>asakusa-compiler-analyzer</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-inspection-driver</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.asakusafw.planner.spark</groupId>
