--- a/pom.xml
+++ b/pom.xml
@@ -408,4 +408,30 @@ encoding/<project>=UTF-8
 		</repository>
 	</repositories>
 
+	<profiles>
+		<profile>
+			<id>disable-assertions</id>
+			<activation>
+				<property>
+					<name>!debug</name>
+				</property>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>net.alchim31.maven</groupId>
+							<artifactId>scala-maven-plugin</artifactId>
+							<configuration>
+								<args>
+									<arg>-Xdisable-assertions</arg>
+								</args>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
