Change planner artifact.

--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -62,8 +62,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.asakusafw.planner.spark</groupId>
-			<artifactId>asakusafw-planner-spark</artifactId>
+			<groupId>com.asakusafw.spark</groupId>
+			<artifactId>asakusa-spark-planner</artifactId>
 		</dependency>
 
 		<dependency>
