--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<asakusafw.version>0.7.2-hadoop1</asakusafw.version>
 		<asakusafw-lang.version>0.1-SNAPSHOT</asakusafw-lang.version>
 		<asakusafw-bridge.version>0.1-SNAPSHOT</asakusafw-bridge.version>
-		<asakusafw-planner-spark.version>0.1-SNAPSHOT</asakusafw-planner-spark.version>
+		<asakusafw-spark-planner.version>0.1-SNAPSHOT</asakusafw-spark-planner.version>
 
 		<scala.binary.version>2.10</scala.binary.version>
 		<scala.version>${scala.binary.version}.4</scala.version>
@@ -231,9 +231,9 @@ encoding/<project>=UTF-8
 			</dependency>
 
 			<dependency>
-				<groupId>com.asakusafw.planner.spark</groupId>
-				<artifactId>asakusafw-planner-spark</artifactId>
-				<version>${asakusafw-planner-spark.version}</version>
+				<groupId>com.asakusafw.spark</groupId>
+				<artifactId>asakusa-spark-planner</artifactId>
+				<version>${asakusafw-spark-planner.version}</version>
 			</dependency>
 
 			<dependency>
