--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<name>Asakusa DSL Compiler for Spark Project Root</name>
 	<groupId>com.asakusafw.spark</groupId>
-	<artifactId>asakusafw-spark</artifactId>
+	<artifactId>asakusa-spark</artifactId>
 	<packaging>pom</packaging>
 	<version>0.1.0-SNAPSHOT</version>
 
@@ -152,16 +152,6 @@
 					<configuration>
 						<downloadSources>true</downloadSources>
 						<downloadJavadocs>false</downloadJavadocs>
-						<buildcommands>
-							<buildcommand>org.scala-ide.sdt.core.scalabuilder</buildcommand>
-						</buildcommands>
-						<projectnatures>
-							<projectnature>org.scala-ide.sdt.core.scalanature</projectnature>
-							<projectnature>org.eclipse.jdt.core.javanature</projectnature>
-						</projectnatures>
-						<sourceIncludes>
-							<sourceInclude>**/*.scala</sourceInclude>
-						</sourceIncludes>
 						<classpathContainers>
 							<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7</classpathContainer>
 						</classpathContainers>
