--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,15 @@
 		<artifact.version>${project.version}</artifact.version>
 		<artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
-		<asakusafw.version>0.7.3-hadoop1</asakusafw.version>
+		<asakusafw.version>0.7.3-hadoop2</asakusafw.version>
 		<asakusafw-lang.version>0.1-SNAPSHOT</asakusafw-lang.version>
 		<asakusafw-bridge.version>0.1-SNAPSHOT</asakusafw-bridge.version>
 
 		<scala.binary.version>2.10</scala.binary.version>
 		<scala.version>${scala.binary.version}.4</scala.version>
-		<spark.version>1.2.1</spark.version>
-		<hadoop.version>1.2.1</hadoop.version>
+		<spark.version>1.3.1</spark.version>
+		<jetty.version>8.1.14.v20131031</jetty.version>
+		<hadoop.version>2.6.0</hadoop.version>
 		<asm.version>5.0.3</asm.version>
 		<scala-arm.version>1.4</scala-arm.version>
 		<guava.version>14.0.1</guava.version>
@@ -466,6 +467,48 @@ encoding/<project>=UTF-8
 				</exclusions>
 			</dependency>
 			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-http</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-continuation</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-servlet</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-util</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-security</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-plus</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
+				<version>${jetty.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.hadoop</groupId>
 				<artifactId>hadoop-client</artifactId>
 				<version>${hadoop.version}</version>
@@ -486,6 +529,10 @@ encoding/<project>=UTF-8
 					<exclusion>
 						<groupId>org.slf4j</groupId>
 						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
