--- a/compiler/core/pom.xml
+++ b/compiler/core/pom.xml
@@ -83,6 +83,10 @@
 			<groupId>com.asakusafw.lang.compiler</groupId>
 			<artifactId>asakusa-compiler-inspection</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.asakusafw.lang.compiler</groupId>
+			<artifactId>asakusa-compiler-hadoop</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.asakusafw.spark</groupId>
