--- a/pom.xml
+++ b/pom.xml
@@ -441,6 +441,11 @@ encoding/<project>=UTF-8
 				<artifactId>asakusa-compiler-optimizer</artifactId>
 				<version>${asakusafw-lang.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.asakusafw.lang.compiler</groupId>
+				<artifactId>asakusa-compiler-hadoop</artifactId>
+				<version>${asakusafw-lang.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.asakusafw.bridge</groupId>
