Put `uploadArchives` task settings for asakusafw.

--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -91,6 +91,16 @@ processResources { t ->
     }
 }
 
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            configuration = project.configurations.deployerJars
+            repository id: 'com.asakusafw.releases', url: 's3://asakusafw/maven/releases'
+            snapshotRepository id: 'com.asakusafw.snapshots', url: 's3://asakusafw/maven/snapshots'
+        }
+    }
+}
+
 task sourcesJar(type: Jar) {
     classifier 'sources'
     from sourceSets.main.allSource
