--- a/tools/asm/pom.xml
+++ b/tools/asm/pom.xml
@@ -79,7 +79,7 @@
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.binary.version}</artifactId>
+      <artifactId>scalatest_${scala.compat.version}</artifactId>
     </dependency>
   </dependencies>
 
