--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -106,7 +106,7 @@
 
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_${scala.binary.version}</artifactId>
+      <artifactId>spark-core_${scala.compat.version}</artifactId>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -144,7 +144,7 @@
 
     <dependency>
       <groupId>com.jsuereth</groupId>
-      <artifactId>scala-arm_${scala.binary.version}</artifactId>
+      <artifactId>scala-arm_${scala.compat.version}</artifactId>
     </dependency>
 
     <dependency>
@@ -170,7 +170,7 @@
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.binary.version}</artifactId>
+      <artifactId>scalatest_${scala.compat.version}</artifactId>
     </dependency>
     <dependency>
       <groupId>com.asakusafw.lang.compiler</groupId>
@@ -189,7 +189,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-repl_${scala.binary.version}</artifactId>
+      <artifactId>spark-repl_${scala.compat.version}</artifactId>
     </dependency>
   </dependencies>
 
