--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
     <asakusafw.version>0.7.3-hadoop2</asakusafw.version>
-    <asakusafw-lang.version>0.1.0</asakusafw-lang.version>
+    <asakusafw-lang.version>0.1.1-SNAPSHOT</asakusafw-lang.version>
 
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>${scala.compat.version}.4</scala.version>
