--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.asakusafw.spark</groupId>
   <artifactId>asakusa-spark</artifactId>
   <packaging>pom</packaging>
-  <version>0.1.2-SNAPSHOT</version>
+  <version>0.1.2</version>
 
   <description>Asakusa DSL Compiler for Spark Project Root</description>
   <url>http://asakusafw.com</url>
@@ -28,7 +28,7 @@
     <connection>scm:git:git@github.com:asakusafw/asakusafw-spark.git</connection>
     <developerConnection>scm:git:git@github.com:asakusafw/asakusafw-spark.git</developerConnection>
     <url>https://github.com/asakusafw/asakusafw-spark</url>
-    <tag>HEAD</tag>
+    <tag>0.1.2</tag>
   </scm>
 
   <properties>
@@ -37,7 +37,7 @@
     <artifact.id>${artifact.name}-${artifact.version}</artifact.id>
 
     <asakusafw.version>0.7.4-hadoop2</asakusafw.version>
-    <asakusafw-lang.version>0.1.1</asakusafw-lang.version>
+    <asakusafw-lang.version>0.1.2</asakusafw-lang.version>
 
     <scala.compat.version>2.10</scala.compat.version>
     <scala.version>${scala.compat.version}.4</scala.version>
