Add asakusa-yass-core project.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
     <scalatest.version>2.2.3</scalatest.version>
   </properties>
 
+  <modules>
+    <module>core</module>
+  </modules>
+
   <build>
     <pluginManagement>
       <plugins>
