--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
   <properties>
     <asakusafw.version>0.7.4-hadoop2</asakusafw.version>
+    <asakusafw-lang.version>0.2.0</asakusafw-lang.version>
     <asakusafw-spark.version>0.2.1-SNAPSHOT</asakusafw-spark.version>
 
     <scala.compat.version>2.10</scala.compat.version>
@@ -49,6 +50,7 @@
 
   <modules>
     <module>runtime</module>
+    <module>compiler</module>
   </modules>
 
   <build>
@@ -357,8 +359,26 @@ encoding/<project>=UTF-8
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>com.asakusafw</groupId>
+        <artifactId>asakusa-dsl-vocabulary</artifactId>
+        <version>${asakusafw.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw</groupId>
+        <artifactId>simple-graph</artifactId>
+        <version>${asakusafw.version}</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
         <groupId>com.asakusafw.spark</groupId>
         <artifactId>asakusa-spark-runtime</artifactId>
+        <version>${asakusafw-spark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.spark</groupId>
+        <artifactId>asakusa-spark-compiler</artifactId>
         <version>${asakusafw-spark.version}</version>
       </dependency>
 
@@ -510,8 +530,34 @@ encoding/<project>=UTF-8
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>com.asakusafw.lang.compiler</groupId>
+        <artifactId>asakusa-compiler-api-testing</artifactId>
+        <version>${asakusafw-lang.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.lang.compiler</groupId>
+        <artifactId>asakusa-compiler-model-testing</artifactId>
+        <version>${asakusafw-lang.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>com.asakusafw.spark</groupId>
         <artifactId>asakusa-spark-runtime</artifactId>
+        <classifier>tests</classifier>
+        <version>${asakusafw-spark.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.spark</groupId>
+        <artifactId>asakusa-spark-compiler</artifactId>
+        <classifier>tests</classifier>
+        <version>${asakusafw-spark.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.spark</groupId>
+        <artifactId>asakusa-spark-tools-asm</artifactId>
         <classifier>tests</classifier>
         <version>${asakusafw-spark.version}</version>
         <scope>test</scope>
