--- a/iterativebatch/runtime/core/pom.xml
+++ b/iterativebatch/runtime/core/pom.xml
@@ -88,6 +88,10 @@
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
