Revise assertions of compiler.

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -121,4 +121,30 @@
     </dependency>
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>disable-assertions</id>
+      <activation>
+        <property>
+          <name>!debug</name>
+        </property>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>net.alchim31.maven</groupId>
+              <artifactId>scala-maven-plugin</artifactId>
+              <configuration>
+                <args>
+                  <arg>-Xdisable-assertions</arg>
+                </args>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
+
 </project>
