--- a/pom.xml
+++ b/pom.xml
@@ -782,4 +782,19 @@ encoding/<project>=UTF-8
     </pluginRepository>
   </pluginRepositories>
 
+  <profiles>
+    <profile>
+      <id>scala-2.11</id>
+      <activation>
+        <property>
+          <name>scala-2.11</name>
+        </property>
+      </activation>
+      <properties>
+        <scala.compat.version>2.11</scala.compat.version>
+        <scala.version>${scala.compat.version}.7</scala.version>
+      </properties>
+    </profile>
+  </profiles>
+
 </project>
