--- a/iterativebatch/compiler/core/pom.xml
+++ b/iterativebatch/compiler/core/pom.xml
@@ -8,11 +8,9 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <name>Asakusa DSL Compiler for Spark Iterative Batch Extensions Compiler Core</name>
+  <name>Asakusa on Spark Iterative Batch Extensions Compiler Core</name>
   <artifactId>asakusa-spark-extensions-iterativebatch-compiler-core</artifactId>
   <packaging>jar</packaging>
-
-  <description>Asakusa DSL Compiler for Spark Iterative Batch Extensions Compiler Core</description>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
