--- a/iterativebatch/compiler/pom.xml
+++ b/iterativebatch/compiler/pom.xml
@@ -8,11 +8,9 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <name>Asakusa DSL Compiler for Spark Iterative Batch Extensions Compiler</name>
+  <name>Asakusa on Spark Iterative Batch Extensions Compiler</name>
   <artifactId>asakusa-spark-extensions-iterativebatch-compiler</artifactId>
   <packaging>pom</packaging>
-
-  <description>Asakusa DSL Compiler for Spark Iterative Batch Extensions Compiler</description>
 
   <modules>
     <module>core</module>
