--- a/iterativebatch/pom.xml
+++ b/iterativebatch/pom.xml
@@ -8,11 +8,9 @@
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <name>Asakusa DSL Compiler for Spark Iterative Batch Extensions</name>
+  <name>Asakusa on Spark Iterative Batch Extensions</name>
   <artifactId>asakusa-spark-extensions-iterativebatch</artifactId>
   <packaging>pom</packaging>
-
-  <description>Asakusa DSL Compiler for Spark Iterative Batch Extensions</description>
 
   <modules>
     <module>runtime</module>
