Fix gradle plug-in project to obtain asakusafw snapshot versions.

--- a/gradle/build.gradle
+++ b/gradle/build.gradle
@@ -43,6 +43,7 @@ configurations {
 repositories {
     mavenCentral()
     maven { url 'http://asakusafw.s3.amazonaws.com/maven/releases' }
+    maven { url 'http://asakusafw.s3.amazonaws.com/maven/snapshots' }
 }
 
 dependencies {
