--- a/pom.xml
+++ b/pom.xml
@@ -506,6 +506,16 @@ encoding/<project>=UTF-8
         <artifactId>asakusa-compiler-model-iterative</artifactId>
         <version>${asakusafw-lang.version}</version>
       </dependency>
+      <dependency>
+        <groupId>com.asakusafw.iterative</groupId>
+        <artifactId>asakusa-iterative-launch</artifactId>
+        <version>${asakusafw-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.asakusafw.iterative</groupId>
+        <artifactId>asakusa-iterative-common</artifactId>
+        <version>${asakusafw-lang.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>org.apache.spark</groupId>
